# unwritten-memories

./: .firebaserc  .gitignore  COORDINATE_SYSTEM_COMPLETE_FIX.md  COORDINATE_SYSTEM_FIX.md  FLUTTER_APP_AUDIT_2025-10-16.md  IMPLEMENTATION_SUMMARY.md  LYRIA_STEM_GENERATOR_GEM_PROMPT.md  MANIFEST.in  MSV_CONVERSION_PROMPT.md  MUSIC_SYSTEM_ARCHITECTURE_VALIDATION_COMPLETE.md  MUSIC_SYSTEM_CONSOLIDATION_COMPLETE.md  MUSIC_SYSTEM_REORGANIZATION_COMPLETE.md  Makefile  README.md  TO-DO.md  TRAINING_PROMPT_UNWRITTEN_V2.0.md  pyproject.toml  requirements.txt
.firebase/: hosting.YXBwXGJ1aWxkXHdlYg.cache
app/: .gitignore  ARCHITECTURE_IMPLEMENTATION_SUMMARY.md  FIREBASE_QUICK_START.md  FIREBASE_SETUP_GUIDE.md  README.md  REFACTORING_COMPLETE.md  analysis_options.yaml  pubspec.yaml  setup_game_assets.ps1  setup_game_assets.sh
app/docs/: ARCHITECTURE.md  BOOK_ANIMATION_IMPLEMENTATION.md  CARD_INTERACTION_GUIDE.md  DOCUMENTATION_CONSOLIDATION_2025-10-15.md  DOCUMENTATION_REORGANIZATION_2025-10-15.md  FIREBASE_APP_CHECK_SETUP.md  FIREBASE_INTEGRATION_COMPLETE.md  FIREBASE_WEB_FIX.md  README.flutter.md  README.md  (+5 more)
data/: MULTI_STEP_PIPELINE_ISSUES.md  PROMPT_SIMPLIFICATION_V2.1.md  QUICKSTART_WINDOWS.md  SETUP_COMPLETE.md  TRAINING_SETUP.md  qwen3_training_pipeline.py
docs/: DOCUMENTATION-UPDATE-ANALYSIS.md  MODEL-SELECTION-GUIDE.md  QUICK-REFERENCE-MODES.md  master_animations_guide_v_1_0.md  master_flutter_flame_spec_v_1_0.md  master_numerical_grounding_v_1_2.md  master_truths_canonical_spec_v_1_2.md  master_ui_ux_canonical_rules_v_1_0.md
functions/: .eslintrc.js  README.md
music/: index.css  index.tsx  types.ts
notebooks/: .gitkeep
scripts/: analyze_training_data.py  generate_silence_stems.ps1  master_truth_compliance_validator.py  set_ollama_env.ps1
tests/: __init__.py
(+546 files in other folders)
